--- a/onepagebudget_privacyPolicy.html
+++ b/onepagebudget_privacyPolicy.html
@@ -44,6 +44,26 @@
 </ul>
 </p>
 
+<h2>Advertising (AdMob)</h2>
+<p>We display ads using <strong>Google Mobile Ads SDK (AdMob)</strong>. The SDK and its partners may process the following to show, measure, and secure ads (examples include):</p>
+<ul>
+  <li><strong>Identifiers</strong> (e.g., Google Advertising ID/AAID)</li>
+  <li><strong>Approximate location</strong> (derived from IP), IP address (for fraud prevention and geolocation at a broad level)</li>
+  <li><strong>Device information</strong> (e.g., device/OS version, app version)</li>
+  <li><strong>Ad and event data</strong> (impressions, clicks, crash reports related to the ad SDK)</li>
+</ul>
+<p>In regions where required (e.g., EEA/UK), we use Google’s <strong>User Messaging Platform (UMP)</strong> to obtain and respect your consent choices for personalized vs. non-personalized ads and for any applicable “Do Not Sell or Share” signals.</p>
+<p>Learn more about Google’s data use and partners here:
+  <a href="https://policies.google.com/technologies/partner-sites">Google Privacy &amp; Terms</a> and
+  <a href="https://support.google.com/admob/answer/9012903">AdMob &amp; user consent</a>.
+</p>
+  
+<h2>Children’s Privacy</h2>
+<p>The App is <strong>not directed to children</strong>. We do not knowingly allow personalized ads to children. If we learn that a child has used the App in a way that requires parental consent by law, we will take appropriate steps.</p>
+
+<h2>International Transfers</h2>
+<p>AdMob and its partners may process data on servers outside your country. Google’s privacy documentation explains safeguards in place.</p>
+
 <h1>When does One Page Budget use end user information from third parties?</h1>
 <p>One Page Budget will collect End User Data necessary to provide the One Page Budget services to our customers.</p>
 <p>End users may voluntarily provide us with information they have made available on social media websites. If you provide us with any such information, we may collect publicly available information from the social media websites you have indicated. You can control how much of your information social media websites make public by visiting these websites and changing your privacy settings.</p>
