Addition of Analytics Data section

--- a/onepagebudget_privacyPolicy.html
+++ b/onepagebudget_privacyPolicy.html
@@ -42,6 +42,17 @@
   <p>Depending on your region and consent, ads may be personalized. In the EU/UK and other regions where required, we use Google’s <strong>User Messaging Platform (UMP)</strong> to collect and respect your ad consent choices.</p>
   <p>More details: <a href="https://policies.google.com/technologies/partner-sites">Google Privacy & Terms</a> and <a href="https://support.google.com/admob/answer/9012903">AdMob & consent</a>.</p>
 
+  <h3>3) Analytics Data</h3>
+  <p>We use <strong>Google Analytics for Firebase</strong> to understand how people use the App and improve its features. Analytics events may include:</p>
+  <ul>
+    <li>App launches and screen views</li>
+    <li>Buttons tapped and features used</li>
+    <li>General device information (model, OS version, app version)</li>
+  </ul>
+  <p>Google may process device identifiers and IP addresses for these purposes. We do not send your budgeting data (categories, transactions, amounts) to Google Analytics.</p>
+  <p>You can opt out of analytics collection in system settings (<em>Settings → Google → Ads</em>) or by adjusting in-app consent where required.</p>
+  <p>More details: <a href="https://policies.google.com/technologies/partner-sites">Google Privacy & Terms</a>.</p>
+
   <h2>Your Controls</h2>
   <ul>
     <li><strong>Consent (EEA/UK, some US states):</strong> You will see a consent dialog (Google UMP) to select personalized vs. non-personalized ads. You may withdraw consent at any time.</li>
