--- a/onepagebudget_privacyPolicy.html
+++ b/onepagebudget_privacyPolicy.html
@@ -29,7 +29,7 @@
 
   <h2>Data We Process</h2>
   <h3>1) Data You Enter</h3>
-  <p>Categories, transactions, expected vs. actual amounts, and settings you add in the App are stored locally on your device. We do not automatically upload this data to our servers. If optional cloud sync is introduced in the future, you will be able to choose whether to use it.</p>
+  <p>Categories, transactions, expected vs. actual amounts, and settings you add in the App are stored locally on your device. We automatically upload this data and related events to our servers.</p>
 
   <h3>2) Advertising Data</h3>
   <p>We use <strong>Google Mobile Ads SDK (AdMob)</strong> to show ads. The SDK and its partners may process:</p>
@@ -50,13 +50,11 @@
     <li>General device information (model, OS version, app version)</li>
   </ul>
   <p>Google may process device identifiers and IP addresses for these purposes. We do not send your budgeting data (categories, transactions, amounts) to Google Analytics.</p>
-  <p>You can opt out of analytics collection in system settings (<em>Settings → Google → Ads</em>) or by adjusting in-app consent where required.</p>
   <p>More details: <a href="https://policies.google.com/technologies/partner-sites">Google Privacy & Terms</a>.</p>
 
   <h2>Your Controls</h2>
   <ul>
     <li><strong>Consent (EEA/UK, some US states):</strong> You will see a consent dialog (Google UMP) to select personalized vs. non-personalized ads. You may withdraw consent at any time.</li>
-    <li><strong>OS-level Ads Personalization:</strong> On Android, you can reset your Advertising ID or opt out of Ads Personalization in system settings (<em>Settings → Google → Ads</em>).</li>
     <li><strong>In-App:</strong> A link to this Privacy Policy is always available in the App’s Settings page. Where required, we provide a way to reopen the consent dialog.</li>
   </ul>
 
